concluindo a baceça do site

--- a/index.html
+++ b/index.html
@@ -29,22 +29,37 @@
        <div class="container2">
          <div class="texto">
             <h1 class="h1">Top notch experience</h1>
-            <h2 class="paragrafo">Medicenter is a responsive template <br>  perfect for all screen sizes</h2>
+            <h2 class="paragrafo">Medicenter is a responsive template <br> perfect for all screen sizes</h2>
          </div>
          <div class="quadros">
             <div class="quadro1">
                 <div class="banner-titulo"> Emergrncy Case</div>
-                <div class="banner-texto">If you need a doctor urgently outside of medicenter opening hours, call emergency appointment number for emergency service.</div>
+                <div class="banner-texto">If you need a doctor urgently outside of <br> medicenter opening hours, call emergency <br>appointment number for emergency service.</div>
+                <a href="#">Read more</a>
             </div>
             <div class="quadro2">
                 <div class="banner-titulo">Doctors Timetable</div>
-                <div class="banner-texto">Here at medicenter we have individual doctor's lists. Click read more below to see services and current timetable for our doctors.</div>
+                <div class="banner-texto">Here at medicenter we have individual doctor's <br> lists. Click read more below to see services <br> and current timetable for our doctors.</div>
+                <a href="#">Read more</a>
             </div>
             <div class="quadro3">
             <div class="banner-titulo">Opening Hours</div>
-            </div>
-            
-         </div>
+           <div class="lista">
+            <ul>
+                <li class="lista1">
+                    <p>Monday - Friday</p>
+                    <p class="numero">8.00 - 17.00</p>
+                </li> 
+                <li class="lista2">
+                    <p>saturday</p>
+                    <p class="numero">9.30 - 17.30</p>
+                </li>
+                <li class="lista3">
+                    <p>sunday</p>
+                    <p class="numero">9.30 - 15.00</p>
+                </li>   
+            </ul>
+           </div>            
        </div>
    </section>
 </body>
