--- a/index.html
+++ b/index.html
@@ -62,5 +62,26 @@
            </div>            
        </div>
    </section>
+   
+   <section id="geral">
+    <div class="container">
+            <section>
+                Latest News
+            </section>
+            <aside>
+                <div class="widget">
+                    <div class="widget_tittle">
+                         <div class="widget_tittle_text">Departmen</div>
+                         <div class="widget_tittle_bar"></div>
+                    </div>
+                </div>
+                
+            </aside>
+    </div>
+
+   </section>
+   
+   
+
 </body>
 </html>         
