--- a/index.html
+++ b/index.html
@@ -66,16 +66,46 @@
    <section id="geral">
     <div class="container">
             <section>
-                Latest News
+                <div class="widget">
+                    <div class="widget_tittle">
+                         <div class="widget_tittle_text"> Latest News</div>
+                         <div class="widget_tittle_bar"></div>
+                    </div>
+                    <div class="widget_body1">
+                        <article>
+                            <div class="news_data">12 DEC 12</div>
+                            <div class="news_num">2</div>
+                        </article>
+                    </div>
             </section>
             <aside>
                 <div class="widget">
                     <div class="widget_tittle">
-                         <div class="widget_tittle_text">Departmen</div>
+                         <div class="widget_tittle_text">Departments</div>
                          <div class="widget_tittle_bar"></div>
                     </div>
-                </div>
-                
+                   <div class="blocos">
+                    <div class="blocos1"></div>
+                    <div class="blocos2"></div>
+                    <div class="blocos3"></div>
+                    <div class="blocos4"></div>
+                    <div class="blocos5"></div>
+                    <div class="blocos6"></div>
+                   
+                    <div class="widget_body2">
+                        <div class="widget_tittle_text">Make An Appointment</div>
+                        <div class="widget_tittle_bar"></div>
+                    </div>
+                    <div class="widget_contact"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consecte.</p> </div>
+                    <div class="contact_geral">
+                        <ul>
+                        <li class="list1">by phone: (27)99645-9992</li>
+                        <li class="list">by e-mail: vinyciosofficial@gmail.com</li>
+                        <li class="list">or fill in the form on our contact page</li>
+                        </ul>
+                    </div>
+
+                </div> 
             </aside>
     </div>
 
