atualização do projeto

--- a/index.html
+++ b/index.html
@@ -75,6 +75,40 @@
                         <article>
                             <div class="news_data">12 DEC 12</div>
                             <div class="news_num">2</div>
+                            <div class="news_img1"><img src="imagens/fotos/imagen11.jpg" alt=""></div>
+                            <div class="news_text1"><h1>Lorem inpusum dolor sit amat velum</h1></div>
+                            <div class="news_text2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum placeat explicabo necessitatibus ullam maxime natus omnis corrupti fuga molestiae voluptates atque.</p></div>
+                            <div class="news_borda"></div>
+                        </article>
+                    </div>
+                    <div class="widget_body2">
+                        <article>
+                            <div class="news_data">12 DEC 12</div>
+                            <div class="news_num">2</div>
+                            <div class="news_img1"><img src="imagens/fotos/imagen12.jpg" alt=""></div>
+                            <div class="news_text1"><h1>Lorem inpusum dolor sit amat velum</h1></div>
+                            <div class="news_text2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum placeat explicabo necessitatibus ullam maxime natus omnis corrupti fuga molestiae voluptates atque.</p></div>
+                            <div class="news_borda"></div>
+                        </article>
+                    </div>  
+                    <div class="widget_body1">
+                        <article>
+                            <div class="news_data">12 DEC 12</div>
+                            <div class="news_num">2</div>
+                            <div class="news_img1"><img src="imagens/fotos/imagen12.jpg" alt=""></div>
+                            <div class="news_text1"><h1>Lorem inpusum dolor sit amat velum</h1></div>
+                            <div class="news_text2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum placeat explicabo necessitatibus ullam maxime natus omnis corrupti fuga molestiae voluptates atque.</p></div>
+                            <div class="news_borda"></div>
+                        </article>
+                    </div>
+                    <div class="widget_body2">
+                        <article>
+                            <div class="news_data">12 DEC 12</div>
+                            <div class="news_num">2</div>
+                            <div class="news_img1"><img src="imagens/fotos/imagen11.jpg" alt=""></div>
+                            <div class="news_text1"><h1>Lorem inpusum dolor sit amat velum</h1></div>
+                            <div class="news_text2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum placeat explicabo necessitatibus ullam maxime natus omnis corrupti fuga molestiae voluptates atque.</p></div>
+                            <div class="news_borda"></div>
                         </article>
                     </div>
             </section>
