--- a/index.html
+++ b/index.html
@@ -142,8 +142,75 @@
                 </div> 
             </aside>
     </div>
-
    </section>
+   <footer>
+        <div class="footer_container">
+            <div class="footer_menu">
+                <div class="footer_bloco1">
+                    <div class="footer_fm">Health Insurance</div>
+                    <div class="footer_text">Here in medicenter we have individual</div>
+                </div>
+                <div class="footer_bloco2">
+                    <div class="footer_fm">Medical Records</div>
+                    <div class="footer_text">Here in medicenter we have individual</div>
+                </div>
+                <div class="footer_bloco3">
+                    <div class="footer_fm">Online Bil Pay</div>
+                    <div class="footer_text">Here in medicenter we have individual</div>
+                </div>
+            </div>
+            <div class="footer_area">
+                <div class="footer_itens">
+                     <div class="footer_title">Medicenter Clinic</div>
+                     <div class="footer_bar"></div>
+                     <div class="footer_p">Mauris adipiscing mauris fringilla turpis interdum <br> sed piulvinar nisi malesuada individual.</div>
+                     <div class="footer_contas1">
+                        <ul>
+                            <li class="footer_lista">
+                                <p>Medicenter Clinic</p>
+                            </li>
+                            <li class="footer_lista">
+                                <p>33 farlane Street</p>
+                                <p class="footer_num1">+123 655 655</p>
+                            </li>
+                            <li class="footer_lista">
+                                <p>Keilor East</p>
+                                <p class="footer_num2">+123 755 755</p>
+                            </li>
+                            <li class="footer_lista">
+                                <p>VIC 3033,Australia</p>
+                                <p class="footer_num3">medicenter@gmail.com</p>
+                            </li>
+                        </ul>
+                     </div>
+                    <div class="footer_contas2">
+                        <img src="imagens/fotos/facebook.jpg" alt="">
+                        <img src="imagens/fotos/instagram.jpg" alt="">
+                        <img src="imagens/fotos/youtube1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="footer_itens">
+                    <div class="footer_title">Latest Posts</div>
+                    <div class="footer_bar"></div>
+                    <div class="footer_lista">
+                        <ul>
+                            <li>
+                                <p>Mauris adipiscing mauris fringilla turpis interdum </p>
+                            </li>
+                            <li>
+                               
+                            </li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer_itens">
+                    <div class="footer_title">Latest Tweets</div>
+                    <div class="footer_bar"></div>
+                </div>
+            </div>
+        </div>
+   </footer>
    
 </body>
 </html>         
